--- a/index.css
+++ b/index.css
@@ -1,3 +1,7 @@
+body {
+  margin: 8px 24px;
+}
+
 h1 {
   margin-bottom: 0.4rem;
 }
@@ -34,6 +38,10 @@ input {
 
 input::-webkit-inner-spin-button {
   -webkit-appearance: none;
+}
+
+#pi span {
+  display: inline-block;
 }
 
 .digit,
