--- a/index.css
+++ b/index.css
@@ -2,8 +2,16 @@ body {
   margin: 8px 24px;
 }
 
+.content {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
 h1 {
   margin-bottom: 0.4rem;
+  font-size: 32px;
 }
 
 p {
@@ -14,8 +22,31 @@ p {
   display: flex;
 }
 
-button {
+.flex button {
   margin-left: 10px;
+}
+
+.numpad {
+  display: grid;
+  grid-template-columns: auto auto auto;
+  justify-items: stretch;
+  row-gap: 15px;
+  column-gap: 10px;
+}
+
+.numpad button {
+  font-size: 20px;
+  height: 40px;
+}
+
+.numpad button:last-child {
+  grid-column-end: span 3;
+}
+
+@media (min-width: 768px) {
+  .numpad {
+    display: none;
+  }
 }
 
 div,
@@ -28,16 +59,24 @@ input {
 }
 
 #log {
-  margin-top: 50px;
+  margin: 50px 0;
+  height: 100%;
+  overflow: scroll;
 }
 
 input {
-  margin-left: 5px;
-  border-style: solid;
+  display: none;
 }
 
-input::-webkit-inner-spin-button {
-  -webkit-appearance: none;
+@media (min-width: 768px) {
+  input {
+    display: inline-block;
+    margin-left: 5px;
+    border-style: solid;
+  }
+  input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+  }
 }
 
 #pi span {
@@ -64,6 +103,12 @@ input::-webkit-inner-spin-button {
   background-color: #ffd2d2;
   animation-name: wrong;
   animation-duration: 0.5s;
+}
+
+.wrong {
+  border-color: red;
+  outline-color: red;
+  background-color: #ffd2d2;
 }
 
 .success {
